--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,9 @@ Pods/
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
+
+####
+# Jazzy Docs build
+#
+
+build/
